Risolve bug